<resources>
    <string name="app_name">Validator</string>
    <string name="enter_password">Enter a password</string>
    <string name="button_send">Validate</string>

</resources>
